[gd_scene load_steps=3 format=3 uid="uid://daagnxle7pogn"]

[ext_resource type="Theme" uid="uid://dq33ynkq606di" path="res://resources/themes/main_theme.tres" id="1_ixr7u"]
[ext_resource type="Script" uid="uid://niy5t6dpeh16" path="res://stage_select.gd" id="1_lyskf"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_ixr7u")
script = ExtResource("1_lyskf")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TittleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="StageGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
columns = 5

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2

[node name="StageInfoPanel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(500, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StageInfoPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StageTittle" type="Label" parent="StageInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="StageDescription" type="RichTextLabel" parent="StageInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="BestScoreLabel" type="Label" parent="StageInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="StageInfoPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="StageInfoPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="StageInfoPanel/VBoxContainer/ButtonContainer"]
layout_mode = 2
